# Short-Term-Stock-Market-Prediction-Using-Deep-Learning

./: README.md  pyproject.toml
notebooks/: Model - BiLSTM.ipynb  Model - Simple LSTM.ipynb  Model - Stacked LSTM 1.ipynb  Model - Stacked LSTM 2.ipynb  Ricardo Stock Price Time Series Exploration.ipynb
