[tool.poetry]
name = "deep-learning-project"
version = "0.1.0"
description = ""
authors = ["ab78 <amy.barber@ricardo.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "^1.5.1"
jupyter = "^1.0.0"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
dask = {extras = ["complete"], version = "^2022.10.2"}
xarray = "^2022.10.0"
pyarrow = "^10.0.0"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"
tqdm = "^4.64.1"
seaborn = "^0.12.1"
yfinance = "^0.1.87"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
tensorflow = "^2.11.0"
keras = "^2.11.0"
plotly = "^5.11.0"
cufflinks = "^0.17.3"
giotto-tda = "^0.6.0"
statsmodels = "^0.13.5"
pandas-ta = "^0.3.14-beta.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
